# spacechat

./: Cargo.toml
spacechat-agent/: Cargo.toml  build.rs
spacechat-agent/src/: event.rs  lib.rs  main.rs  server.rs
spacechat-agent/src/protos/: spacechat-agent.proto
spacechat-passport/: Cargo.toml  build.rs
spacechat-passport/src/: lib.rs  main.rs  types.rs
spacechat-passport/src/command/: error.rs  key_gen.rs  mod.rs  run_server.rs
spacechat-passport/src/protos/: spacechat-passport.proto
spacechat-passport/src/server/: handler.rs
spacechat-ui/: Cargo.toml
