[package]
name = "spacechat-agent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.19"
libp2p = { version = "0.41.0", features = ["tcp-tokio"] }
tokio = { version = "1.15.0", features = ["macros", "rt", "io-util", "rt-multi-thread", "io-std"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter", "tracing-log"] }
tracing-actix-web = "0.5.0-beta.6"
clap = { version = "3.0.0-rc.8", features = ["derive"] }
actix-web = "4.0.0-beta.15"
openssl = { version = "0.10", features = ["vendored"] }
uuid = { version = "0.8", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0.132"
base64 = "0.13.0"
protobuf = { "version" = "3.0.0-alpha.2", git = "https://github.com/stepancheg/rust-protobuf.git", features = ["with-serde"] }

[features]

[build-dependencies]
protobuf-codegen = { "version" = "3.0.0-alpha.2", git = "https://github.com/stepancheg/rust-protobuf.git" }
